0025912: Exception during reading STEP file with GD&T

add missing "break" statements.

Test case for issue CR25912